fix grant number spill over

--- a/frontend/src/components/GoalCards/GoalTable.scss
+++ b/frontend/src/components/GoalCards/GoalTable.scss
@@ -63,10 +63,12 @@
   display: none;
 }
 
-.ttahub-goal-card__recipient-column {
+.ttahub-goal-card__recipient-column,
+.ttahub-goal-card__grant-number-column {
   min-width: 0;
 }
 
-.ttahub-goal-card__recipient-column p {
+.ttahub-goal-card__recipient-column p,
+.ttahub-goal-card__grant-number-column p {
   overflow-wrap: break-word;
 }
